炫彩编程助手/Data/DemoMgr/net/Lib/XCGUI.cs


		[DllImport("xcgui.dll", EntryPoint = "XEle_RegEventC2", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_RegEventC2 (int hEle,int nEvent,int pFun);

		[DllImport("xcgui.dll", EntryPoint = "XEle_RemoveEventC", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_RemoveEventC (int hEle,int nEvent,int pFun);

		[DllImport("xcgui.dll", EntryPoint = "XEle_SendEvent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XEle_SendEvent (int hEle,int hEventEle,int nEvent,int wParam,int lParam);

		[DllImport("xcgui.dll", EntryPoint = "XEle_PostEvent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_PostEvent (int hEle,int hEventEle,int nEvent,int wParam,int lParam);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsShow", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsShow (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsEnable", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsEnable (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsEnableFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsEnableFocus (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsDrawFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsDrawFocus (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsEnableEvent_XE_PAINT_END", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsEnableEvent_XE_PAINT_END (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsMouseThrough", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsMouseThrough (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsBkTransparent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsBkTransparent (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsKeyTab", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsKeyTab (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsSwitchFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsSwitchFocus (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsEnable_XE_MOUSEWHEEL", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsEnable_XE_MOUSEWHEEL (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsChildEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsChildEle (int hEle,int hChildEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsEnableLayout", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsEnableLayout (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_IsEnableCanvas", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_IsEnableCanvas (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_Enable", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_Enable (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableFocus (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableDrawFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableDrawFocus (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableDrawBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableDrawBorder (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableCanvas", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableCanvas (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableEvent_XE_PAINT_END", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableEvent_XE_PAINT_END (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableBkTransparent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableBkTransparent (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableMouseThrough", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableMouseThrough (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableKeyTab", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableKeyTab (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableSwitchFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableSwitchFocus (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableEvent_XE_MOUSEWHEEL", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableEvent_XE_MOUSEWHEEL (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableLayout", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableLayout (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_SetRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XEle_SetRect (int hEle,RECT* pRect,bool bRedraw);

		[DllImport("xcgui.dll", EntryPoint = "XEle_SetRectEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XEle_SetRectEx (int hEle,int x,int y,int cx,int cy,bool bRedraw);

		[DllImport("xcgui.dll", EntryPoint = "XEle_SetRectLogic", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XEle_SetRectLogic (int hEle,RECT* pRect,bool bRedraw);

		[DllImport("xcgui.dll", EntryPoint = "XEle_GetRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_GetRect (int hEle,RECT* pRect);

		[DllImport("xcgui.dll", EntryPoint = "XEle_GetRectLogic", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_GetRectLogic (int hEle,RECT* pRect);

		[DllImport("xcgui.dll", EntryPoint = "XEle_GetClientRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_GetClientRect (int hEle,RECT* pRect);

		[DllImport("xcgui.dll", EntryPoint = "XEle_GetWndClientRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_GetWndClientRect (int hEle,RECT* pRect);

		[DllImport("xcgui.dll", EntryPoint = "XEle_GetWidth", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XEle_GetWidth (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_GetHeight", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XEle_GetHeight (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_RectWndClientToEleClient", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_RectWndClientToEleClient (int hEle,RECT* pRect);

		[DllImport("xcgui.dll", EntryPoint = "XEle_PointWndClientToEleClient", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_PointWndClientToEleClient (int hEle,POINT* pPt);

		[DllImport("xcgui.dll", EntryPoint = "XEle_RectClientToWndClient", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_RectClientToWndClient (int hEle,RECT* pRect);

		[DllImport("xcgui.dll", EntryPoint = "XEle_PointClientToWndClient", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_PointClientToWndClient (int hEle,POINT* pPt);

		[DllImport("xcgui.dll", EntryPoint = "XEle_AddEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_AddEle (int hEle,int hChildEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_InsertEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_InsertEle (int hEle,int hChildEle,int index);

		[DllImport("xcgui.dll", EntryPoint = "XEle_RemoveEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_RemoveEle (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_AddShape", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_AddShape (int hEle,int hShape);

		[DllImport("xcgui.dll", EntryPoint = "XEle_SetZOrder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_SetZOrder (int hEle,int index);

		[DllImport("xcgui.dll", EntryPoint = "XEle_SetZOrderEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_SetZOrderEx (int hEle,int hDestEle,int nType);

		[DllImport("xcgui.dll", EntryPoint = "XEle_GetZOrder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XEle_GetZOrder (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_SetTopmost", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XEle_SetTopmost (int hEle,bool bTopmost);

		[DllImport("xcgui.dll", EntryPoint = "XEle_EnableCSS", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_EnableCSS (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XEle_SetCssName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_SetCssName (int hEle,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XEle_GetCssName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern string XEle_GetCssName (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XEle_ShowEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XEle_ShowEle (int hEle,bool bShow);

		[DllImport("xcgui.dll", EntryPoint = "XEle_GetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XEle_GetType (int hEle);
